Add resgroup sles12 jobs to master pipeline.
Signed-off-by: Zhenghua Lyu <zlv@pivotal.io>
Signed-off-by: Richard Guo <riguo@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -55,6 +55,7 @@ groups:
   - mpp_interconnect
   - mpp_resource_group_centos6
   - mpp_resource_group_centos7
+  - mpp_resource_group_sles12
   - gate_mpp_end
 ################################
   - gate_mm_start
@@ -154,6 +155,7 @@ groups:
   - mpp_interconnect
   - mpp_resource_group_centos6
   - mpp_resource_group_centos7
+  - mpp_resource_group_sles12
   - gate_mpp_end
 
 - name: G:MM
@@ -1850,7 +1852,10 @@ jobs:
     - get: centos-gpdb-dev-6
       tags: ["ccp"]
   - put: terraform
-    <<: *cs_ccp_terraform_params
+    params:
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
   - task: gen_cluster
     <<: *cs_ccp_gen_cluster_params
   - task: pre_run_test_setup
@@ -1886,7 +1891,7 @@ jobs:
     - get: gpdb_src
       tags: ["ccp"]
       passed: [gate_mpp_start]
-    - get: bin_gpdb
+    - get: gpdb_binary
       tags: ["ccp"]
       resource: bin_gpdb_centos6
       passed: [gate_mpp_start]
@@ -1906,8 +1911,6 @@ jobs:
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
       <<: *ccp_gen_cluster_default_params
-    input_mapping:
-      gpdb_binary: bin_gpdb
   - task: run_tests
     tags: ["ccp"]
     file: gpdb_src/concourse/tasks/ic_gpdb_resgroup.yml
@@ -1927,14 +1930,14 @@ jobs:
     - get: gpdb_src
       tags: ["ccp"]
       passed: [gate_mpp_start]
-    - get: bin_gpdb
+    - get: gpdb_binary
       tags: ["ccp"]
       resource: bin_gpdb_centos7
       passed: [gate_mpp_start]
       trigger: true
     - get: ccp_src
       tags: ["ccp"]
-    - get: centos-gpdb-dev-7
+    - get: centos-gpdb-dev-6
       tags: ["ccp"]
   - put: terraform
     tags: ["ccp"]
@@ -1948,14 +1951,54 @@ jobs:
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
       <<: *ccp_gen_cluster_default_params
-    input_mapping:
-      gpdb_binary: bin_gpdb
   - task: run_tests
     tags: ["ccp"]
     file: gpdb_src/concourse/tasks/ic_gpdb_resgroup.yml
-    image: centos-gpdb-dev-7
+    image: centos-gpdb-dev-6
     params:
       TEST_OS: centos7
+    on_success:
+      <<: *ccp_destroy
+    on_failure:
+      <<: *set_failed
+  ensure:
+    <<: *set_failed
+
+- name: mpp_resource_group_sles12
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      tags: ["ccp"]
+      passed: [gate_mpp_start]
+    - get: gpdb_binary
+      tags: ["ccp"]
+      resource: bin_gpdb_sles11
+      passed: [gate_mpp_start]
+      trigger: true
+    - get: ccp_src
+      tags: ["ccp"]
+    - get: centos-gpdb-dev-6
+      tags: ["ccp"]
+  - put: terraform
+    tags: ["ccp"]
+    params:
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
+        platform: sles12
+  - task: gen_cluster
+    tags: ["ccp"]
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+      # platform is necessary to generate correct ssh config
+      platform: sles12
+  - task: run_tests
+    tags: ["ccp"]
+    file: gpdb_src/concourse/tasks/ic_gpdb_resgroup.yml
+    image: centos-gpdb-dev-6
+    params:
+      TEST_OS: sles12
     on_success:
       <<: *ccp_destroy
     on_failure:
@@ -1971,6 +2014,7 @@ jobs:
       - mpp_interconnect
       - mpp_resource_group_centos6
       - mpp_resource_group_centos7
+      - mpp_resource_group_sles12
       trigger: true
 ############### MPP End
 
@@ -2996,6 +3040,7 @@ jobs:
     - client_loader_remote_test_aix
     - mpp_resource_group_centos6
     - mpp_resource_group_centos7
+    - mpp_resource_group_sles12
     - MU_check_centos
     - MM_analyzedb
     - MM_gpinitsystem
