--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -24,6 +24,8 @@ groups:
   - icw_gporca_centos6
   - icw_gporca_centos7
   - icw_gporca_sles11
+  - icw_gporca_sles12
+  - icw_planner_sles12
   - icw_planner_ubuntu16
   - icw_gporca_conan_ubuntu16
   - icw_extensions_gpcloud
@@ -122,6 +124,8 @@ groups:
   - icw_gporca_centos6
   - icw_gporca_centos7
   - icw_gporca_sles11
+  - icw_gporca_sles12
+  - icw_planner_sles12
   - icw_planner_ictcp_centos6
   - icw_extensions_gpcloud
   - icw_gporca_centos6_gpos_memory
@@ -1092,6 +1096,100 @@ jobs:
       TEST_OS: sles
       CONFIGURE_FLAGS: {{configure_flags}}
 
+- name: icw_gporca_sles12
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      tags: ["ccp"]
+      passed: [gate_icw_start]
+    - get: gpdb_binary
+      tags: ["ccp"]
+      resource: bin_gpdb_sles11
+      passed: [gate_icw_start]
+      trigger: true
+    - get: ccp_src
+      tags: ["ccp"]
+    - get: centos-gpdb-dev-6
+      tags: ["ccp"]
+  - put: terraform
+    tags: ["ccp"]
+    params:
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
+        platform: sles12
+        aws_instance-node-instance_type: m4.xlarge
+        number_of_nodes: 1
+  - task: gen_cluster
+    tags: ["ccp"]
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+      # platform is necessary to generate correct ssh config
+      platform: sles12
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    tags: ["ccp"]
+    file: gpdb_src/concourse/tasks/ic_gpdb_sles12.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on' installcheck-world
+      TEST_OS: sles12
+    on_success:
+      <<: *ccp_destroy
+    on_failure:
+      <<: *set_failed
+  ensure:
+    <<: *set_failed
+
+- name: icw_planner_sles12
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      tags: ["ccp"]
+      passed: [gate_icw_start]
+    - get: gpdb_binary
+      tags: ["ccp"]
+      resource: bin_gpdb_sles11
+      passed: [gate_icw_start]
+      trigger: true
+    - get: ccp_src
+      tags: ["ccp"]
+    - get: centos-gpdb-dev-6
+      tags: ["ccp"]
+  - put: terraform
+    tags: ["ccp"]
+    params:
+      <<: *ccp_default_params
+      vars:
+        <<: *ccp_default_vars
+        platform: sles12
+        aws_instance-node-instance_type: m4.xlarge
+        number_of_nodes: 1
+  - task: gen_cluster
+    tags: ["ccp"]
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    params:
+      <<: *ccp_gen_cluster_default_params
+      # platform is necessary to generate correct ssh config
+      platform: sles12
+    on_failure:
+      <<: *ccp_destroy
+  - task: run_tests
+    tags: ["ccp"]
+    file: gpdb_src/concourse/tasks/ic_gpdb_sles12.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off' installcheck-world
+      TEST_OS: sles12
+    on_success:
+      <<: *ccp_destroy
+    on_failure:
+      <<: *set_failed
+  ensure:
+    <<: *set_failed
+
 - name: icw_planner_ubuntu16
   plan:
   - aggregate:
@@ -1256,6 +1354,8 @@ jobs:
       - icw_gporca_centos6
       - icw_gporca_centos7
       - icw_gporca_sles11
+      - icw_gporca_sles12
+      - icw_planner_sles12
       - icw_planner_ictcp_centos6
       - icw_extensions_gpcloud
       - icw_gporca_centos6_gpos_memory
@@ -1834,7 +1934,11 @@ jobs:
       passed:
       - gate_compile_end
     - get: bin_gpdb_centos7
-      passed: [gate_compile_end]
+      passed:
+      - gate_compile_end
+    - get: bin_gpdb_sles11
+      passed:
+      - gate_compile_end
 
 - name: mpp_interconnect
   plan:
@@ -3032,6 +3136,8 @@ jobs:
     - icw_gporca_centos6
     - icw_gporca_centos7
     - icw_gporca_sles11
+    - icw_gporca_sles12
+    - icw_planner_sles12
     - icw_planner_ubuntu16
     - icw_gporca_conan_ubuntu16
     - test_gpdb_debian_package
