Move adding -Werror=uninitialized at end of configure.
Many of the autoconf tests produce warnings, or even compiler errors, on purpose
as they run through the conftest programs. So, treating warning as error should
be last step after all autoconf checks are performed, otherwise false
side-effects happens.

Author: Ashwin Agrawal <aagrawal@pivotal.io>
Author: Xin Zhang <xzhang@pivotal.io>

--- a/configure.in
+++ b/configure.in
@@ -596,7 +596,6 @@ fi
 
 if test "$GCC" = yes -a "$ICC" = no; then
   CFLAGS="$CFLAGS -Wall -Wmissing-prototypes -Wpointer-arith"
-  PGAC_PROG_CC_CFLAGS_OPT([-Werror=uninitialized])
   # These work in some but not all gcc versions
   # GPDB code is full of declarations after statement.
   #PGAC_PROG_CC_CFLAGS_OPT([-Wdeclaration-after-statement])
@@ -2451,6 +2450,14 @@ elif test "$PORTNAME" = "openbsd"; then
   PGAC_PROG_CC_LDFLAGS_OPT([-Wl,-Bdynamic], $link_test_func)
 else
   PGAC_PROG_CC_LDFLAGS_OPT([-Wl,--as-needed], $link_test_func)
+fi
+
+# Many of the autoconf tests produce warnings, or even compiler errors, on
+# purpose as they run through the conftest programs. So, treating warning as
+# error should be last step after all autoconf checks are performed, otherwise
+# false side-effects happens.
+if test "$GCC" = yes -a "$ICC" = no; then
+  PGAC_PROG_CC_CFLAGS_OPT([-Werror=uninitialized])
 fi
 
 # Begin output steps
