Properly destroy both clusters in gptransfer tests
This was accidentally removed in the commit that changed debug_sleep

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -2496,7 +2496,7 @@ jobs:
       BEHAVE_FLAGS: --tags=gptransfer --tags=-skip_source_43
       CUSTOM_ENV: export GPTRANSFER_DEST_HOST=mdw; export GPTRANSFER_DEST_PORT=5432; export GPTRANSFER_DEST_USER=gpadmin; export GPTRANSFER_MAP_FILE=/tmp/source_map_file; export GPTRANSFER_SOURCE_HOST=mdw-2; export GPTRANSFER_SOURCE_PORT=5432; export GPTRANSFER_SOURCE_USER=gpadmin;
     on_success:
-      <<: *ccp_destroy
+      <<: *ccp_destroy_2_cluster
     on_failure:
       <<: *set_failed
   ensure:
@@ -2593,7 +2593,7 @@ jobs:
       BEHAVE_FLAGS: --tags=gptransfer --tags=-skip_source_5
       CUSTOM_ENV: export GPTRANSFER_DEST_HOST=mdw; export GPTRANSFER_DEST_PORT=5432; export GPTRANSFER_DEST_USER=gpadmin; export GPTRANSFER_MAP_FILE=/tmp/source_map_file; export GPTRANSFER_SOURCE_HOST=mdw-2; export GPTRANSFER_SOURCE_PORT=5432; export GPTRANSFER_SOURCE_USER=gpadmin;
     on_success:
-      <<: *ccp_destroy
+      <<: *ccp_destroy_2_cluster
     on_failure:
       <<: *set_failed
   # Similar to the on_failure blocks, the final cleanup needs to be both clusters as well
