ProcessArrayCmp() should handle ScalarArray of constants and non constants.
When there is a comparison between a scalar ident and an array consisting of
constants and non constants, ORCA would not estimate the cardinality correctly.
This is because the ProcessArrayCmp() function would simply return the value of
CStatsPredUnsupported() when the array was not a ConstArray. This patch fixes
the issue by considering Arrays in which constants and non constants are
present together and makes sure that the cardinality is estimated correctly.

e.g.
```
CREATE TABLE bar (a int);

INSERT INTO bar SELECT i FROM generate_series(1,10000) i;
INSERT INTO bar SELECT i%10 FROM generate_series(1,10000) i;
ANALYZE bar;
```

The MCVs are in the range 0-9.

But below queries with and without MCV both estimated the same number of rows before this fix.

```sql
explain select * from bar where a in (1, (select count(*) from bar));
                                              QUERY PLAN
------------------------------------------------------------------------------------------------------
 Gather Motion 3:1  (slice3; segments: 3)  (cost=0.00..1407777.04 rows=8000 width=4)
   ->  Nested Loop  (cost=0.00..1407765.17 rows=2667 width=4)
         Join Filter: public.bar.a = ANY (ARRAY[1::bigint, (count((count())))])
         ->  Broadcast Motion 1:3  (slice2)  (cost=0.00..444.64 rows=3 width=8)
               ->  Aggregate  (cost=0.00..444.64 rows=1 width=8)
                     ->  Gather Motion 3:1  (slice1; segments: 3)  (cost=0.00..444.64 rows=1 width=8)
                           ->  Aggregate  (cost=0.00..444.64 rows=1 width=8)
                                 ->  Table Scan on bar  (cost=0.00..443.40 rows=20000 width=1)
         ->  Table Scan on bar  (cost=0.00..443.40 rows=20000 width=4)
 Optimizer status: PQO version 2.51.3
(10 rows)
```

Plan produced for IN clause with non MCV and non constant value in IN clause
```sql
explain select * from bar where a in (1000, (select count(*) from 

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -106,6 +106,7 @@ add_orca_test(CConstTblGetTest)
 add_orca_test(COuterJoinTest)
 add_orca_test(CPredicateTest)
 add_orca_test(CSemiJoinTest)
+add_orca_test(CScalarArrayCmpTest)
 
 if (GPOS_ARCH_BITS EQUAL 64)
   add_orca_test(CSubqueryHandlerTest)
